force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/Solicitud_de_actualizacion_de_datos__c.object-meta.xml
<CustomObject>
    <label>Solicitud de actualización de datos</label>
    <nameField>
        <displayFormat>SAD-{000000000}</displayFormat>
        <label>SAD</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes de actualización de datos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>