force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZ_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAZ_Aprobado</label>
    <type>Checkbox</type>
</CustomField>