force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZ_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAZ_Cuenta</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No se encontró información que coincida con los filtros</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CAZ Información propia</value>
        </filterItems>
        <infoMessage>Registros de clientes propios</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actualización de datos</relationshipLabel>
    <relationshipName>Solicitudes_de_actualizaci_n_de_datos</relationshipName>
    <type>Lookup</type>
</CustomField>