force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZ_Direccion_plantilla_S__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Direccion_plantilla_S__c</fullName>
    <label>CAZ_Direccion_plantilla_S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>