force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZ_Email__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Email__c</fullName>
    <label>CAZ_Email</label>
    <type>Email</type>
</CustomField>