force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZ_Estado__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Estado__c</fullName>
    <label>CAZ_Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recibido</fullName>
                <default>true</default>
                <label>Recibido</label>
            </value>
            <value>
                <fullName>En aprobación</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>