force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZ_IdExterno__c.field-meta.xml
<CustomField>
    <fullName>CAZ_IdExterno__c</fullName>
    <label>CAZ_IdExterno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>