force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZB_Estado__c.field-meta.xml
<CustomField>
    <fullName>CAZB_Estado__c</fullName>
    <label>CAZB_Estado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>