force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZB_Pais__c.field-meta.xml
<CustomField>
    <fullName>CAZB_Pais__c</fullName>
    <label>CAZB_Pais</label>
    <length>80</length>
    <type>Text</type>
</CustomField>