force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZP_Email__c.field-meta.xml
<CustomField>
    <fullName>CAZP_Email__c</fullName>
    <label>CAZP_Email</label>
    <type>Email</type>
</CustomField>