force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZPB_CodigoPostal__c.field-meta.xml
<CustomField>
    <fullName>CAZPB_CodigoPostal__c</fullName>
    <label>CAZPB_CodigoPostal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>