force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZPB_Estado__c.field-meta.xml
<CustomField>
    <fullName>CAZPB_Estado__c</fullName>
    <label>CAZPB_Estado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>