force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZPB_Municipio__c.field-meta.xml
<CustomField>
    <fullName>CAZPB_Municipio__c</fullName>
    <label>CAZPB_Municipio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>