force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZPS_Colonia__c.field-meta.xml
<CustomField>
    <fullName>CAZPS_Colonia__c</fullName>
    <label>CAZPS_Colonia</label>
    <length>80</length>
    <type>Text</type>
</CustomField>