force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZPS_No_exterior__c.field-meta.xml
<CustomField>
    <fullName>CAZPS_No_exterior__c</fullName>
    <label>CAZPS_No_exterior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>