force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZPS_Pais__c.field-meta.xml
<CustomField>
    <fullName>CAZPS_Pais__c</fullName>
    <label>CAZPS_Pais</label>
    <length>80</length>
    <type>Text</type>
</CustomField>