force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZS_Calle__c.field-meta.xml
<CustomField>
    <fullName>CAZS_Calle__c</fullName>
    <label>CAZS_Calle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>