force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/fields/CAZS_No_exterior__c.field-meta.xml
<CustomField>
    <fullName>CAZS_No_exterior__c</fullName>
    <label>CAZS_No. exterior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>