force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/recordTypes/CAZ_Informacion_propia_inicial.recordType-meta.xml
<RecordType>
    <fullName>CAZ_Informacion_propia_inicial</fullName>
    <active>true</active>
    <description>Paso para crear el registro inicial</description>
    <label>Solicitud de actualización</label>
</RecordType>