force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CAZ_Cuenta__c</columns>
    <columns>CAZ_Estado__c</columns>
    <columns>CAZ_IdExterno__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>