force-app/main/default/objects/Solicitud_de_actualizacion_de_datos__c/listViews/CAZ_Aprobador_SAD_Solicitud_de_actualizacion_de_datos.listView-meta.xml
<ListView>
    <fullName>CAZ_Aprobador_SAD_Solicitud_de_actualizacion_de_datos</fullName>
    <filterScope>Queue</filterScope>
    <label>CAZ_Aprobador_SAD</label>
    <queue>CAZ_Aprobador_SAD</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>